--- a/Conceitos_python.ipynb
+++ b/Conceitos_python.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "mKwi-uwJ86q7"
       ],
-      "authorship_tag": "ABX9TyNCzc+GoXn4LfrXh91JtCsE",
+      "authorship_tag": "ABX9TyP0ostYDtMwzWB7Tr2EkN7k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -733,6 +733,313 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# List Comprehensions"
+      ],
+      "metadata": {
+        "id": "-JsxwBnzxVik"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista=[]\n",
+        "for valor in range(5):\n",
+        "  lista.append(valor+10)\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "id": "S38x1DuQxZpN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = [valor+10 for valor in range(5)]\n",
+        "print (lista)"
+      ],
+      "metadata": {
+        "id": "Xq-CQe41yqrE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista=[]\n",
+        "for valor in range(1,30):\n",
+        "  if valor % 4==0:\n",
+        "    lista.append(valor)\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "id": "MH7bSb03yxs2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "multiplos4 = [valor for valor in range(1,30) if valor % 4==0]\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "id": "3AjBgC6TzC4H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "conceito = ['azul' if nota >= 6 else 'vermelha' for nota in range (1,11)]\n",
+        "print (conceito)"
+      ],
+      "metadata": {
+        "id": "6vqg48o5zQHc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Vetore e matrizes"
+      ],
+      "metadata": {
+        "id": "5REmZWkPzrS8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor = [2,4,6,8]"
+      ],
+      "metadata": {
+        "id": "MTJO5evtzuzm"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(vetor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N_8KQ26x0VEK",
+        "outputId": "32f21ad0-17b8-4c1c-acc0-d2edb2bd291b"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz = [[1,2,3],\n",
+        "          [4,5,6,],\n",
+        "          [7,8,9]]\n",
+        "print (matriz)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2u_AUP_G0Xmz",
+        "outputId": "6058bf56-226f-4281-fbf6-3e154b9b0264"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "#as np é um apelido para a biblioteca"
+      ],
+      "metadata": {
+        "id": "qkCqwfei0h6d"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vetor2 = np.array([1,-3,6,-4.5])"
+      ],
+      "metadata": {
+        "id": "Le3rm8b10rVC"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(vetor2)\n",
+        "#agora virou vetor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4jVzgec507VX",
+        "outputId": "d2e42adf-da8e-49f8-c756-fffcce89d543"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz2 = np.ones((2,3)) #duas linhas e 3 colunas\n",
+        "matriz2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PryECPbh1AHV",
+        "outputId": "df40d903-e7ea-49e0-ea96-9766f8ef672f"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1.],\n",
+              "       [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(matriz2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6aUNi2i71NpI",
+        "outputId": "af16cbc2-9489-47db-81d3-989d545ff135"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matriz3 = np.diag((2,4,6,8,10))\n",
+        "matriz3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "08uvFVxf1Pak",
+        "outputId": "7482a532-936b-40d9-8a01-abcb3c475e4d"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2,  0,  0,  0,  0],\n",
+              "       [ 0,  4,  0,  0,  0],\n",
+              "       [ 0,  0,  6,  0,  0],\n",
+              "       [ 0,  0,  0,  8,  0],\n",
+              "       [ 0,  0,  0,  0, 10]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(matriz3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y46Hf8Gb1YhC",
+        "outputId": "41f5a3fc-2162-46cb-9b99-f8929c5b263d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     }
   ]
 }
